--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.19",
+    "@types/nodemailer": "^7.0.4",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -23,6 +24,7 @@
     "express": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
+    "nodemailer": "^7.0.11",
     "zod": "^4.1.12"
   },
   "devDependencies": {
